--- a/Android Bridge/AndroidManifest.xml
+++ b/Android Bridge/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.madavan.bridge"
+    package="com.madavan.bridge.android"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.madavan.bridge.BridgeActivity"
+            android:name="com.madavan.bridge.android.BridgeActivity"
             android:label="@string/title_activity_bridge" >
         </activity>
     </application>
