--- a/Android Bridge/AndroidManifest.xml
+++ b/Android Bridge/AndroidManifest.xml
@@ -21,6 +21,10 @@
             android:name="com.madavan.bridge.android.LoginActivity"
             android:label="@string/title_activity_login" >
         </activity>
+        <activity
+            android:name="com.madavan.bridge.android.GameRoomActivity"
+            android:label="@string/title_activity_game_room" >
+        </activity>
     </application>
 
 </manifest>
