--- a/Android Bridge/AndroidManifest.xml
+++ b/Android Bridge/AndroidManifest.xml
@@ -13,9 +13,15 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="com.madavan.bridge.android.BridgeActivity"
-            android:label="@string/title_activity_bridge" >
+            android:label="@string/title_activity_bridge"
+            android:screenOrientation="landscape">
+            <intent-filter>
+			    <action android:name="android.intent.action.MAIN" />
+			    <category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
         </activity>
     </application>
 
