--- a/Android Bridge/AndroidManifest.xml
+++ b/Android Bridge/AndroidManifest.xml
@@ -15,16 +15,16 @@
         android:theme="@style/AppTheme" >
         
         <activity
-            android:name="com.madavan.bridge.android.BridgeActivity"
+            android:name="com.madavan.bridge.android.LoginActivity"
             android:label="@string/title_activity_bridge"
-            android:screenOrientation="landscape">
+            android:screenOrientation="portrait">
             <intent-filter>
 			    <action android:name="android.intent.action.MAIN" />
 			    <category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
         </activity>
         <activity
-            android:name="com.madavan.bridge.android.LoginActivity"
+            android:name="com.madavan.bridge.android.BridgeActivity"
             android:label="@string/title_activity_login" >
         </activity>
         <activity
